# f1-race-replay

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/routes/: events.py  qualifying.py  race.py
backend/app/services/: f1_service.py
frontend/: package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: EventList.tsx  SessionButtons.tsx  YearSelector.tsx
frontend/src/components/qualifying/: LapTimeLeaderboard.tsx  SegmentSelector.tsx  TelemetryCharts.tsx
frontend/src/components/race/: DriverInfoPanel.tsx  Leaderboard.tsx  PlaybackControls.tsx  ProgressBar.tsx  TimingTower.tsx  TrackCanvas.tsx  WeatherPanel.tsx
frontend/src/hooks/: useEvents.ts  useKeyboardControls.ts  usePlayback.ts
frontend/src/pages/: QualifyingViewer.tsx  RaceViewer.tsx  SelectionPage.tsx
frontend/src/stores/: playbackStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: trackGeometry.ts
src/: arcade_replay.py  f1_data.py  ui_components.py
src/interfaces/: race_replay.py
